--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                 <div class="col-md-6">
                     <div class="message-box">                        
                         <h2>About Zhargal Kharlamov.</h2>
-                        <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed vitae rutrum neque. Ut id erat sit amet libero bibendum aliquam. Donec ac egestas libero, eu bibendum risus. Phasellus et congue justo. </p>
-						<p>Sed vitae rutrum neque. Ut id erat sit amet libero bibendum aliquam. Donec ac egestas libero, eu bibendum risus. Phasellus et congue justo.</p>
+                        <p> Python Developer with 5+ years of experience in Python, SQL Server Database Design and Development (SQL Server 2008-2018), medical devices . Great sense of ownership, team-oriented personality, very organized and eager to deliver high quality work. BS in Mathematics and Computer Science. </p>
+						<p>Abzats #2</p>
 
                         <a href="#" class="sim-btn btn-hover-new" data-text="Download CV"><span>Download CV</span></a>
                     </div><!-- end messagebox -->
